--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -9,6 +9,10 @@ resources.frontController.controllerDirectory = APPLICATION_PATH "/controllers"
 resources.frontController.params.displayExceptions = 0
 
 resources.frontController.moduleDirectory = APPLICATION_PATH "/modules"
+resources.modules[] =
+
+autoloaderNamespaces[] = "Shanty_"
+autoloaderNamespaces[] = "Common_"
 [staging : production]
 
 [testing : production]
