--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -1,18 +1,18 @@
 [production]
-phpSettings.display_startup_errors = 1
-phpSettings.display_errors = 1
+phpSettings.display_startup_errors = 0
+phpSettings.display_errors = 0
 includePaths.library = APPLICATION_PATH "/../library"
 bootstrap.path = APPLICATION_PATH "/Bootstrap.php"
 bootstrap.class = "Bootstrap"
 appnamespace = "Application"
 resources.frontController.controllerDirectory = APPLICATION_PATH "/controllers"
 resources.frontController.params.displayExceptions = 0
-
 resources.frontController.moduleDirectory = APPLICATION_PATH "/modules"
 resources.modules[] =
 
 autoloaderNamespaces[] = "Shanty_"
 autoloaderNamespaces[] = "Common_"
+autoloaderNamespaces[] = "Bas_"
 [staging : production]
 
 [testing : production]
