committed for bas

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -13,6 +13,8 @@ resources.modules[] =
 autoloaderNamespaces[] = "Shanty_"
 autoloaderNamespaces[] = "Common_"
 autoloaderNamespaces[] = "Bas_"
+autoloaderNamespaces[] = "BAS_"
+autoloaderNamespaces[] = "Blogbas_"
 [staging : production]
 
 [testing : production]
